Labatt POCM Deployment to UAT 09.16.2016/objects/Trade_Activation_Kit_Item__c.object
<CustomObject>
    <description>This custom object is used for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Item_Price__c</fullName>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Spend__c</fullName>
        <label>Item Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Item_Name__c</fullName>
        <formula>Marketing_Program_Item__r.Marketing_Item__r.Name</formula>
        <label>Marketing Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Kit__c</fullName>
        <label>Marketing Kit</label>
        <referenceTo>Marketing_Kit__c</referenceTo>
        <relationshipName>Marketing_Kit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marketing_Program_Item__c</fullName>
        <label>Marketing Program Item</label>
        <referenceTo>Marketing_Program_Item__c</referenceTo>
        <relationshipName>Marketing_Kit_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marketing_Type__c</fullName>
        <label>Marketing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapEx</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trade Activation Kit Item</label>
    <nameField>
        <displayFormat>MKI-{0000}</displayFormat>
        <label>Marketing Kit Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Activation Kit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Brands_Must_Match</fullName>
        <active>true</active>
        <errorConditionFormula>Marketing_Program_Item__r.Marketing_Program__r.Brand__c != Marketing_Kit__r.Annual_Brand_Area_Budget_Plan__r.Brand__c</errorConditionFormula>
        <errorMessage>Program Brand and Budget Brand Must Match</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Programs_Must_Match</fullName>
        <active>true</active>
        <errorConditionFormula>Marketing_Kit__r.Marketing_Program_Name__c !=  Marketing_Program_Item__r.Marketing_Program__c</errorConditionFormula>
        <errorMessage>Kit and Item Programs Must Match</errorMessage>
    </validationRules>
</CustomObject>